# sethengine2

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.cmd
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.c
src/base/: list.h
src/core/: CMakeLists.txt  component.c  component.h  core_components.c  core_components.h  core_systems.c  entity.c  entity.h  lua_module.c  platform.c  resources.c  resources.h  sdport.c  system.c  system.h  window.c  window.h
src/port/: CMakeLists.txt  sdport.c
